--- a/src/castellfollit.html
+++ b/src/castellfollit.html
@@ -77,15 +77,17 @@
               ><source
                 type="image/webp"
                 media="(max-width: 500px)"
-                srcset="./img/castellfollit-500px-cropped.webp" />
+                srcset="
+                  ./img/castellfollit-500px-cropped.jpg?as=webp&width=500
+                " />
               <source
                 type="image/webp"
                 media="(max-width: 839px)"
-                srcset="./img/castellfollit-800px.webp" />
+                srcset="./img/castellfollit-1200px.jpg?as=webp&width=800" />
               <source
                 type="image/webp"
                 media="(min-width: 840px)"
-                srcset="./img/castellfollit-1200px.webp" />
+                srcset="./img/castellfollit-1200px.jpg?as=webp&width=1200" />
               <source
                 type="image/jpeg"
                 media="(max-width: 500px)"
@@ -93,7 +95,7 @@
               <source
                 type="image/jpeg"
                 media="(max-width: 839px)"
-                srcset="./img/castellfollit-800px.jpg" />
+                srcset="./img/castellfollit-1200px.jpg?width=800" />
               <source
                 type="image/jpeg"
                 media="(max-width: 840px)"
@@ -169,23 +171,23 @@
             ><source
               type="image/webp"
               media="(max-width: 500px)"
-              srcset="./img/castellfollit2-500px.webp" />
+              srcset="./img/castellfollit2-1200px.jpg?as=webp&width=500" />
             <source
               type="image/webp"
               media="(max-width: 839px)"
-              srcset="./img/castellfollit2-800px.webp" />
+              srcset="./img/castellfollit2-1200px.jpg?as=webp&width=800" />
             <source
               type="image/webp"
               media="(min-width: 840px)"
-              srcset="./img/castellfollit2-1200px.webp" />
+              srcset="./img/castellfollit2-1200px.jpg?as=webp&width=1200" />
             <source
               type="image/jpeg"
               media="(max-width: 500px)"
-              srcset="./img/castellfollit2-500px.jpg" />
+              srcset="./img/castellfollit2-1200px.jpg?width=500" />
             <source
               type="image/jpeg"
               media="(max-width: 839px)"
-              srcset="./img/castellfollit2-800px.jpg" />
+              srcset="./img/castellfollit2-1200px.jpg?width=800" />
             <source
               type="image/jpeg"
               media="(max-width: 840px)"
