--- a/src/index.html
+++ b/src/index.html
@@ -74,23 +74,23 @@
             ><source
               type="image/webp"
               media="(max-width: 440px)"
-              srcset="./img/croscat-400px.webp" />
+              srcset="./img/croscat-1200px.jpg?as=webp&width=400" />
             <source
               type="image/webp"
               media="(max-width: 839px)"
-              srcset="./img/croscat-800px.webp" />
+              srcset="./img/croscat-1200px.jpg?as=webp&width=800" />
             <source
               type="image/webp"
               media="(min-width: 840px)"
-              srcset="./img/croscat-1200px.webp" />
+              srcset="./img/croscat-1200px.jpg?as=webp" />
             <source
               type="image/jpeg"
               media="(max-width: 440px)"
-              srcset="./img/croscat-400px.jpg" />
+              srcset="./img/croscat-1200px.jpg?width=400" />
             <source
               type="image/jpeg"
               media="(max-width: 839px)"
-              srcset="./img/croscat-800px.jpg" />
+              srcset="./img/croscat-1200px.jpg?width=800" />
             <source
               type="image/jpeg"
               media="(max-width: 840px)"
