--- a/src/volcans.html
+++ b/src/volcans.html
@@ -86,9 +86,11 @@
             <figure class="img-galeria__figure">
               <a class="img-galeria__link" href="sta-margarida.html">
                 <img
-                  srcset="././img/sta-margarida-500px.webp 500w"
+                  srcset="
+                    ././img/sta-margarida-1200px.jpg?as=webp&width=500 500w
+                  "
                   sizes="500px"
-                  src="./img/sta-margarida-500px.jpg"
+                  src="./img/sta-margarida-1200px.jpg?width=500"
                   alt="Volcà Santa Margarida"
                   class="img-galeria__element"
                 />
@@ -100,9 +102,9 @@
             <figure class="img-galeria__figure">
               <a class="img-galeria__link" href="castellfollit.html">
                 <img
-                  srcset="./img/castellfollit-500px.webp 500w"
+                  srcset="./img/castellfollit-1200px.jpg?as=webp&width=500 500w"
                   sizes="500px"
-                  src="./img/castellfollit-500px.jpg"
+                  src="./img/castellfollit-1200px.jpg?width=500"
                   alt="Castellfollit de la Roca"
                   class="img-galeria__element"
                 />
@@ -114,9 +116,9 @@
             <figure class="img-galeria__figure">
               <a class="img-galeria__link" href="">
                 <img
-                  srcset="././img/croscat2-500px.webp 500w"
+                  srcset="././img/croscat2-1200px.jpg?as=webp&width=500 500w"
                   sizes="500px"
-                  src="./img/croscat2-500px.jpg"
+                  src="./img/croscat2-1200px.jpg?width=500"
                   alt="Volcà Croscat"
                   class="img-galeria__element"
                 />
@@ -128,9 +130,9 @@
             <figure class="img-galeria__figure">
               <a class="img-galeria__link" href="">
                 <img
-                  srcset="././img/montsacopa-500px.webp 500w"
+                  srcset="././img/montsacopa-1200px.jpg?as=webp&width=500 500w"
                   sizes="500px"
-                  src="./img/montsacopa-500px.jpg"
+                  src="./img/montsacopa-1200px.jpg?width=500"
                   alt="Volcà Montsacopa"
                   class="img-galeria__element"
                 />
@@ -142,9 +144,9 @@
             <figure class="img-galeria__figure">
               <a class="img-galeria__link" href="">
                 <img
-                  srcset="././img/fageda-500px.webp 500w"
+                  srcset="././img/fageda-1200px.jpg?as=webp&width=500 500w"
                   sizes="500px"
-                  src="./img/fageda-500px.jpg"
+                  src="./img/fageda-1200px.jpg?width=500"
                   alt="La Fageda d'en Jordà"
                   class="img-galeria__element"
                 />
