--- a/src/sta-margarida.html
+++ b/src/sta-margarida.html
@@ -77,15 +77,17 @@
               ><source
                 type="image/webp"
                 media="(max-width: 500px)"
-                srcset="./img/sta-margarida-500px-cropped.webp" />
+                srcset="
+                  ./img/sta-margarida-500px-cropped.jpg?as=webp&width=500
+                " />
               <source
                 type="image/webp"
                 media="(max-width: 839px)"
-                srcset="./img/sta-margarida-800px.webp" />
+                srcset="./img/sta-margarida-1200px.jpg?as=webp&width=800" />
               <source
                 type="image/webp"
                 media="(min-width: 840px)"
-                srcset="./img/sta-margarida-1200px.webp" />
+                srcset="./img/sta-margarida-1200px.jpg?as=webp&width=1200" />
               <source
                 type="image/jpeg"
                 media="(max-width: 500px)"
@@ -93,7 +95,7 @@
               <source
                 type="image/jpeg"
                 media="(max-width: 839px)"
-                srcset="./img/sta-margarida-800px.jpg" />
+                srcset="./img/sta-margarida-1200px.jpg?width=800" />
               <source
                 type="image/jpeg"
                 media="(max-width: 840px)"
@@ -189,23 +191,23 @@
             ><source
               type="image/webp"
               media="(max-width: 440px)"
-              srcset="./img/sta-margarida2-500px.webp" />
+              srcset="./img/sta-margarida2-1200px.jpg?as=webp&width=500" />
             <source
               type="image/webp"
               media="(max-width: 839px)"
-              srcset="./img/sta-margarida2-800px.webp" />
+              srcset="./img/sta-margarida2-1200px.jpg?as=webp&width=800" />
             <source
               type="image/webp"
               media="(min-width: 840px)"
-              srcset="./img/sta-margarida2-1200px.webp" />
+              srcset="./img/sta-margarida2-1200px.jpg?as=webp&width=1200" />
             <source
               type="image/jpeg"
               media="(max-width: 440px)"
-              srcset="./img/sta-margarida2-500px.jpg" />
+              srcset="./img/sta-margarida2-1200px.jpg?width=500" />
             <source
               type="image/jpeg"
               media="(max-width: 839px)"
-              srcset="./img/sta-margarida2-800px.jpg" />
+              srcset="./img/sta-margarida2-1200px.jpg?width=800" />
             <source
               type="image/jpeg"
               media="(max-width: 840px)"
