--- a/src/links.html
+++ b/src/links.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <header class="primary-header">
-      <div class="logo"></div>
+      <a class="logo" href="index.html"></a>
       <h1 class="primary-header__title">
         <a class="colored-background-link" href="index.html"
           >Parc Natural de la Zona Volcànica de la Garrotxa
