--- a/src/volcans.html
+++ b/src/volcans.html
@@ -30,6 +30,22 @@
       </a>
     </h1>
   </header>
+  <nav class="nav">
+    <ul class="nav-menu list--no-style">
+      <li>
+        <a class="colored-background-link" href="index.html">Portada</a>
+      </li>
+      <li>
+        <a class="colored-background-link" href="historia.html">Història i formació</a>
+      </li>
+      <li>
+        <a class="colored-background-link" href="volcans.html"><strong>Volcans i llocs d'interès</strong></a>
+      </li>
+      <li>
+        <a class="colored-background-link" href="links.html">Enllaços</a>
+      </li>
+    </ul>
+  </nav>
   <main class="main">
     <section>
       <header class="secondary-header">
