--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,22 @@
       </a>
     </h1>
   </header>
+  <nav class="nav">
+    <ul class="nav-menu list--no-style">
+      <li>
+        <a class="colored-background-link" href="index.html"><strong>Portada</strong></a>
+      </li>
+      <li>
+        <a class="colored-background-link" href="historia.html">Història i formació</a>
+      </li>
+      <li>
+        <a class="colored-background-link" href="volcans.html">Volcans i llocs d'interès</a>
+      </li>
+      <li>
+        <a class="colored-background-link" href="links.html">Enllaços</a>
+      </li>
+    </ul>
+  </nav>
   <main class="main">
     <article>
       <header class="secondary-header">
@@ -87,7 +103,7 @@
   <footer class="footer">
     <div class="footer--logo"></div>
     <nav class="footer--nav">
-      <ul class="footer--nav-menu list--no-style">
+      <ul class="nav-menu list--no-style">
         <li>
           <a class="colored-background-link" href="index.html"><strong>Portada</strong></a>
         </li>
