--- a/src/links.html
+++ b/src/links.html
@@ -30,6 +30,22 @@
       </a>
     </h1>
   </header>
+  <nav class="nav">
+    <ul class="nav-menu list--no-style">
+      <li>
+        <a class="colored-background-link" href="index.html">Portada</a>
+      </li>
+      <li>
+        <a class="colored-background-link" href="historia.html">Història i formació</a>
+      </li>
+      <li>
+        <a class="colored-background-link" href="volcans.html">Volcans i llocs d'interès</a>
+      </li>
+      <li>
+        <a class="colored-background-link" href="links.html"><strong>Enllaços</strong></a>
+      </li>
+    </ul>
+  </nav>
   <main class="main">
     <div>
       <p>
@@ -147,6 +163,11 @@
             <ul>
               <li>
                 <a class="text-link"
+                  href="https://www.catalunyapress.es/texto-diario/mostrar/3167646/pueden-erupcionar-volcanes-garrotxa"
+                  target="_blank">Imatge: Catalunya Press</a>
+              </li>
+              <li>
+                <a class="text-link"
                   href="https://ca.turismegarrotxa.com/27-indrets-d-interes-de-la-garrotxa/reserva-natural-del-volca-del-croscat/"
                   target="_blank">Imatge: Turisme Garrotxa</a>
               </li>
@@ -171,6 +192,53 @@
             </ul>
           </li>
         </ul>
+      </div>
+      <div>
+        <h3 class="secondary-header__title">
+          <span class="fa-solid fa-link"></span> Fonts d'imatges SVG
+        </h3>
+        <p>
+          Aquestes fonts no es troben citades a la pàgina, sinó només aquí, però totes han estat creades per l'autor de
+          la pàgina (Oriol Esquena) utilitzant <a class="text-link"
+            href="https://www.canva.com/design/DAFj0J1N2sk/fUFNgAFoq45ZZtx8Tr4agg/edit?utm_content=DAFj0J1N2sk&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+            target="_blank">Canva</a> (enllaç al link de creació del logotip)
+          i/o <a class="text-link"
+            href="https://www.figma.com/file/m6mbiR77xeGvO5FGRIyxER/Untitled?type=design&node-id=0%3A1&t=uIuFEX2y6IzwEkQe-1"
+            target="_blank">Figma</a> (enllaç al link de creació del volcà).
+        </p>
+        <p>
+          Les imatges SVG de la pàgina de detall també s'han extret de les que proporciona Canva, però no s'han
+          modificat.
+        </p>
+      </div>
+
+      <div>
+        <h3 class="secondary-header__title">
+          <span class="fa-solid fa-link"></span> Fonts d'imatges SVG
+        </h3>
+        <p>
+          Aquestes fonts no es troben citades a la pàgina, sinó només aquí, però totes han estat creades per l'autor de
+          la pàgina utilitzant <a class="text-link"
+            href="https://www.canva.com/design/DAFj0J1N2sk/fUFNgAFoq45ZZtx8Tr4agg/edit?utm_content=DAFj0J1N2sk&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+            target="_blank">Canva</a> (enllaç al link de creació del logotip)
+          i/o <a class="text-link"
+            href="https://www.figma.com/file/m6mbiR77xeGvO5FGRIyxER/Untitled?type=design&node-id=0%3A1&t=uIuFEX2y6IzwEkQe-1"
+            target="_blank">Figma</a> (enllaç al link de creació del volcà).
+        </p>
+        <p>
+          Les imatges SVG de la pàgina de detall també s'han extret de les que proporciona Canva, però no s'han
+          modificat.
+        </p>
+      </div>
+      <div>
+        <h3 class="secondary-header__title">
+          <span class="fa-solid fa-link"></span> Favicon
+        </h3>
+        <p>
+          El favicon s'ha extret de la pàgina <a class="text-link"
+            href="https://www.flaticon.com/free-icon/volcano_2076995?term=volcano&page=1&position=8&origin=tag&related_id=2076995"
+            target="_blank">flaticon</a> que ofereix icones gratuïtes.
+        </p>
       </div>
     </div>
   </main>
