changed class footer

--- a/src/volcans.html
+++ b/src/volcans.html
@@ -144,7 +144,7 @@
   <footer class="footer">
     <div class="footer--logo"></div>
     <nav class="footer--nav">
-      <ul class="footer--nav-menu list--no-style">
+      <ul class="nav-menu list--no-style">
         <li>
           <a class="colored-background-link" href="index.html">Portada</a>
         </li>
